# tightwad

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  benchmark_results.json  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
configs/: cluster-unraid-coord.yaml  cluster.yaml
scripts/: benchmark_proxy.py
tests/: test_config.py  test_coordinator.py  test_dashboard.py  test_distribute.py  test_init_wizard.py  test_inspect.py  test_proxy.py  test_reclaim.py  test_swarm.py
tightwad/: __init__.py  cli.py  config.py  coordinator.py  dashboard.py  distribute.py  gguf_inspect.py  gguf_reader.py  proxy.py  reclaim.py  speculation.py  swarm_transfer.py  tune.py  worker.py
